fix search on mobile

--- a/themes/melaniemagidow/static/css/search.css
+++ b/themes/melaniemagidow/static/css/search.css
@@ -187,25 +187,23 @@
 @media (max-width: 782px) {
   .search-toggle {
     display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
   }
 
-  .search-container {
-    position: relative;
-    margin-top: 0;
+  .search-input {
     opacity: 0;
     visibility: hidden;
-    max-height: 0;
-    overflow: hidden;
-    transition: opacity 0.2s ease, max-height 0.2s ease, visibility 0.2s, margin-top 0.2s ease;
+    height: 0;
+    padding: 0;
+    border: 0;
+    transition: opacity 0.2s ease, height 0.2s ease, visibility 0.2s, padding 0.2s ease;
   }
 
-  .search-container.active {
+  .search-container.active .search-input {
     opacity: 1;
     visibility: visible;
-    max-height: 500px;
+    height: auto;
+    padding: 0.625rem 1rem;
+    border: 1px solid #ddd;
     margin-top: 1rem;
   }
 
